[package]
name = "cargo-commander"
description = "Like npm scripts, but better"
homepage = "https://seranth.github.io/cargo-commander/"
documentation = "https://github.com/seranth/cargo-commander/wiki"
repository = "https://github.com/seranth/cargo-commander"
readme = "README.md"
version = "2.0.1"
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["cargo", "commander", "cmd", "scripts", "commands"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]
exclude = [
    ".idea",
    ".github",
    ".gitignore",
    "cargo-commander.iml"
]

[[bin]]
path = "src/main.rs"
name = "cargo-cmd"

[dependencies]
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.3.0"
dotenv = "0.15"
