[package]
name = "cargo-commander"
version = "2.0.11"
description = "Like npm scripts, but better"
homepage = "https://adaptive-simon.github.io/cargo-commander/"
documentation = "https://github.com/adaptive-simon/cargo-commander/wiki"
repository = "https://github.com/adaptive-simon/cargo-commander"
readme = "README.md"
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["cargo", "commander", "cmd", "scripts", "commands"]
categories = [
  "development-tools",
  "development-tools::cargo-plugins",
  "command-line-utilities",
]
exclude = [".idea", ".github", ".gitignore", "cargo-commander.iml"]

[[bin]]
path = "src/main.rs"
name = "cargo-cmd"

[build-dependencies]
tauri-build = { version = "1.0", features = [], optional = true }

[dependencies]
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.3.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
tauri = { version = "1.0", features = ["api-all"], optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
gui = ["tauri", "tauri-build", "custom-protocol"]
